--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <script src="app.js"></script>
   </head>
   <body ng-app="flapperNews" ng-controller="MainCtrl">
- <div ng-repeat="post in posts" | orderBy: '-upvotes'>
-  {{post.title}} - upvotes: {{post.upvotes}}
+ <div ng-repeat="post in posts | orderBy: '-upvotes'">
+     <span ng-click="incrementUpvotes(post)">^</span>
+    {{post.title}} - upvotes: {{post.upvotes}}
 </div>
 <form ng-submit="addPost()">
     <input type="text" ng-model="title"></input>
-<button ng-click="addPost()">Post</button>
+    <button type="submit">Post</button>
 </form>
+<button ng-click="addPost()">Post</button>
   </body>
 </html>
