--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     {{post.title}} - upvotes: {{post.upvotes}}
 </div>
 <form ng-submit="addPost()">
-    <input type="text" ng-model="title"></input>
+    <input type="text" placeholder="Title" ng-model="title"></input>
+    <br>
+    <input type="text" placeholder="Link" ng-model="link"></input>
+    <br>
     <button type="submit">Post</button>
 </form>
 <button ng-click="addPost()">Post</button>
