--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <body ng-app="flapperNews" ng-controller="MainCtrl">
  <div ng-repeat="post in posts | orderBy: '-upvotes'">
      <span ng-click="incrementUpvotes(post)">^</span>
-    {{post.title}} - upvotes: {{post.upvotes}}
+   <a ng-show="post.link" href="{{post.link}}">
+      {{post.title}}
+   </a>
+   <span ng-hide=
 </div>
 <form ng-submit="addPost()">
     <input type="text" placeholder="Title" ng-model="title"></input>
